--- a/P004280.opf/meta.yml
+++ b/P004280.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W3CN6946
   title: ཞལ་འདོན་ཕྱོགས་བསྡུས་ཐར་ལམ་བགྲོད་པའི་ཐེམ་སྐས།
   author: ''
-  volumes: {}
+  volumes:
+    64f7384d12bc440db0c6de6413bb572c:
+      image_group_id: I3CN6948
+      title: ''
+      volume_number: 1
+      total_pages: 428
