--- a/P004280.opf/layers/v001/Pagination.yml
+++ b/P004280.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: a9ca228ff15f4681b5db22ad28586ba0
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   75742f625d5045659766fb26df34001b:
