--- a/P004280.opf/meta.yml
+++ b/P004280.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004280
 initial_creation_type: ocr
+created_at: 25/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W3CN6946
   title: ཞལ་འདོན་ཕྱོགས་བསྡུས་ཐར་ལམ་བགྲོད་པའི་ཐེམ་སྐས།
