--- a/P004280.opf/meta.yml
+++ b/P004280.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P004280
 initial_creation_type: ocr
 created_at: 25/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 11:07:07.928627
 source_metadata:
   id: bdr:W3CN6946
   title: ཞལ་འདོན་ཕྱོགས་བསྡུས་ཐར་ལམ་བགྲོད་པའི་ཐེམ་སྐས།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 428
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessFairUse
+  restrictedInChina: false
